# simulador-EON-pre-Desastre

./: .gitignore  Analise_dados.ipynb  Analise_dados_refactored.ipynb  Experiment_best_weight_for_scenario.ipynb  README.md  afazeres.txt  compare_scenarios.ipynb  criação_ranqueador_de_alocação.ipynb  experiment_worker.py  modeloProblema.ipynb  modulation_statistics.txt  path_statistics.txt  proposta.txt  pyproject.toml  validate_weights.ipynb
.ipynb_checkpoints/: Experiment_best_weight_for_scenario-checkpoint.ipynb  compare_scenarios-checkpoint.ipynb  validate_weights-checkpoint.ipynb  validate_weights_refactored-checkpoint.ipynb
.simulador_venv/: pyvenv.cfg
.simulador_venv/Scripts/: activate  activate.bat
.venvsimulador/: pyvenv.cfg
.venvsimulador/Scripts/: activate  activate.bat
simulador/: EON_SIM.py  README.md  VARIAVEIS.py  __init__.py  afazeres.txt  contador.py  main.py  run.py  teste.py  utils.py
simulador/analysis/: __init__.py  dataframe_filters.py  metrics_calculator.py  reporters.py  scenario_comparison.py  topology_analysis.py
simulador/config/: __init__.py  settings.py  simulation_settings.py
simulador/core/: __init__.py  path_manager.py  request.py  topology.py
simulador/entities/: __init__.py  datacenter.py  disaster.py  isp.py  scenario.py
simulador/generators/: __init__.py  datacenter_generator.py  disaster_generator.py  isp_generator.py  scenario_generator.py  traffic_generator.py
simulador/routing/: __init__.py  base.py  best_fit.py  best_fit_disaster_aware.py  best_fit_sliding_window.py  disaster.py  disaster_aware_with_blocking.py  first_fit.py  first_fit_disaster_aware.py  subnet.py  subnet_disaster_aware.py  subnet_weighted_disaster_aware.py  weights.py
simulador/simulador/: Analise_dados.ipynb  Logger.py  PathManager.py  Registrador.py  Simulador.py  Variaveis.py  __init__.py  comparar duas simulações entre sí.ipynb  criação_ranqueador_de_alocação.ipynb
simulador/simulador/Cenario/: Cenario.py  GeradorDeCenarios.py  __init__.py
simulador/simulador/Datacenter/: Datacenter.py  GeradorDeDatacenter.py  __init__.py
simulador/simulador/Desastre/: Desastre.py  GeradorDeDesastre.py  __init__.py
simulador/simulador/ISP/: GeradorDeISPs.py  ISP.py  __init__.py
simulador/simulador/Requisicao/: GeradorDeTrafego.py  Requisicao.py  __init__.py
simulador/simulador/Roteamento/: Roteamento.py  RoteamentoBestFit.py  RoteamentoBestFit_evitando_nodes_pre_desastre.py  RoteamentoBestFit_usando_sliding_windown.py  RoteamentoDesastre.py  RoteamentoEvitandoNodesPreDesastreComBloqueio.py  RoteamentoSubredeEvitandoDesastre.py  __init__.py  iRoteamento.py  (+3 more)
simulador/topology/: usa
simulador/utils/: __init__.py  logger.py  metrics.py
simulador/visualization/: __init__.py  accumulated_traffic.py  availability_plots.py  comparison_plots.py  comparison_table.py  topology_plots.py  traffic_plots.py  weight_visualization.py
simuladorV2/: Contador.py  GeradorCenarioSimulacao.py  Logger.py  Registrador.py  Simulador.py  Topologia.py  Variaveis.py  afazeres.txt  teste.ipynb
simuladorV2/Datacenter/: Datacenter.py  GeradorDeDatacenter.py
simuladorV2/Desastre/: Desastre.py  GeradorDeDesastre.py
simuladorV2/ISP/: Datacenter.py  GeradorDeISPs.py  ISP.py
simuladorV2/Requisicao/: GeradorDeTrafego.py  GeradorDeTrafico.py  Requisicao.py
simuladorV2/Roteamento/: Roteamento.py  Roteamento1.py  RoteamentoBestFit.py  RoteamentoDesastre.py  Roteamento_original.py  iRoteamento.py
simuladorV2/_simuladorantigo/: Contador copy.py  EON_SIM.py  VARIAVEIS.py  utils.py
simuladorV2/cenario/: Cenario.py  GeradorCenarioSimulacao.py  GeradorDeCenarios.py
tests/: test_critical_functions.py
(+11 files in other folders)
