[tool.poetry]
name = "simulador-eon-pre-desastre"
version = "0.1.0"
description = "simulador de redes opticas elasticas em situação de desastre"
authors = ["Claudio <claudio.dantas18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
simpy = "^4.1.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
